[project]
name = "argus"
version = "0.1.0"
description = "Argus: GitLab Repository Analysis and Security Tools"
authors = [
    {name = "Athapong Kaewsalapoom", email = "athapong.k@gmail.com"},
]
dependencies = [
    "fastmcp>=0.4.1",
    "gitpython>=3.1.42",
    "uvicorn>=0.34.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
argus = "panopticon.main:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/panopticon"]